# finite-state-agent

./: README.md  pyproject.toml  run_test.sh
examples/: math_agent.py  salary_analysis.py
src/: __init__.py  api.py
src/core/: __init__.py  context.py  machine.py  state.py  transition.py
src/llm/: __init__.py  base.py  claude.py
src/monitoring/: __init__.py  tracker.py
tests/: test_claude.py  test_core.py
