[project]
name = "finite-state-agent"
version = "0.1.0"
description = "FSM-based agent control framework with tool constraints and token monitoring"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that call real LLM APIs",
]
